--- a/index.Rmd
+++ b/index.Rmd
@@ -7,13 +7,9 @@
 # Three charts that display information from the data (what you visualize is up to you)
 
 
+intro para
+summary paragraph + summary calc functions 
+summary aggregated table
 
-Files needed:
-An index.Rmd file that renders your report
-A file with a function that calculates summary information to be included in your report
-A file with a function that returns a table of summary information included in your report
-A file with a function that returns your first chart
-A file with a function that returns your second chart
-A file with a function that returns your third chart
 
 
