--- a/index.Rmd
+++ b/index.Rmd
@@ -1,12 +1,14 @@
 ---
-title: "Summarizing table"
-author: "Shari Sung"
+title: "Midpoint Deliverable"
+author: "Shari Sung" "Xin Zhang"
 date: "11/17/2019"
 output: html_document
 ---
 
 ```{r setup, include = FALSE}
 source("analysis.R")
+source("airbnb_project_interactive_map.R")
+source("scripts/chart.R")
 library("knitr")
 ```
 
@@ -28,14 +30,13 @@ kable(best_hosts_near_pike,
 
 ## Interactive map 
 ```{r map, echo=FALSE}
-source("airbnb_project_interactive_map.R")
 map
 ```
 The reason why we wanted to use an interactive graph is because we wanted to show to location of each airbnb listing and the neccessary information tied to the listings, such as the house owner of the listing, price per night and room type, etc.
 
 ## Bar Graph
 ```{r bar_chart, echo=FALSE}
-source("scripts/chart.R")
 bar_chart_function(data)
 ```
 This chart contains infomation of each neibourhood's average aribnb price. It's very helpful when people are planning their travel budget. You can search for housing result in different neigbourhoods based on your budget. The average airbnb price in Downtown is the most expensive in Seattle which is $288.4471 per night and Delridge is the least expensive with only $100.6805 per night.
+
